--- a/lab7.Rmd
+++ b/lab7.Rmd
@@ -168,12 +168,18 @@ Time and place often matter a great deal in how we interpret data. To get us sta
 
 ### Case Study 1: Covid-19 Case Reporting by Country
 
-Let's take a look at the number of Covid-19 cases reported each day by each country. To do so, we will be reimporting the cases data as a time series - that is, as a dataset that reports the number of cases per day. When we import the data, every column will refer to a specific date and the case totals for that day will be the values stored in that column. 
+Let's take a look at the number of Covid-19 cases reported each day by each country. To do so, we will be reimporting the cases data as a time series - that is, as a dataset that reports the number of cases per day. On import, every column represents a specific date and the case totals for that date are the values stored in that column. 
 ```{r}
 cases_time_series <- read.csv("https://raw.githubusercontent.com/CSSEGISandData/COVID-19/master/csse_covid_19_data/csse_covid_19_time_series/time_series_covid19_confirmed_global.csv", stringsAsFactors = FALSE)
+
+head(cases_time_series)
 ```
 
-When dates are stored as column names and not as values in and of themselves, it can be very difficult to manipulate the data based on dates. For an explanation of why this is, see: https://r4ds.had.co.nz/tidy-data.html The code below transforms this data into a tidy format. In other words, using **gather()**, we create a new row per province/country for every date column in the dataset and the totals associated with that date. Since R automatically places an "X" character in front of numeric column names, we remove that X character and then we transform the values into a date-time format. If you'd like to know more about this, I highly recommend the chapter in R for Data Science above. 
+When dates are stored as column names and not as values in and of themselves, it can be very difficult to manipulate the data based on dates. Remember that column names are not data in and of themselves but a reference to a vector of values. The dates in this dataset are a reference to a vector of case numbers. Because the date values are not represented *in* the data, but only as a reference to case numbers, we can't filter observations to specific dates or to dates that happened before or after another date. The code below reshapes the data so that such filtering is possible.  Using **gather()**, for every province/country in the dataset, a new row will be created in the dataset for every date data was reported. The reshaped data will have two new columns: Case.Date (the date reported) and Cases (the number reported on that date). Basically, we will take wide data (many columns with fewer rows), and reshape it into long data (fewer columns with more rows). 
+
+If you'd like to know more about how to use gather() to create tidy data, I highly recommend [this](https://r4ds.had.co.nz/tidy-data.html) chapter in R for Data Science.
+
+You'll also not above that R automatically places an "X" character in front of numeric column names. Below we remove that X character and then we transform the values into a date-time format.   
 
 ```{r}
 cases_time_series <- cases_time_series %>% 
@@ -181,6 +187,7 @@ cases_time_series <- cases_time_series %>%
   mutate(Case.Date = str_remove(Case.Date, pattern = "X")) %>%
   mutate(Case.Date = mdy(Case.Date))
 
+head(cases_time_series)
 ```
 
 Now let's plot the total number of cases reported each day, faceted by country. 
@@ -198,17 +205,39 @@ cases_time_series %>%
 
 One observation that might stand out in this plot is just how few cases were reported in Russia through mid-March. As of March 24, 2020, Russia had reported fewer than 500 cases of Covid-19. For a country covering more than 6 million square miles, with a population of 145 million, and in such close proximity to China where the case counts are highest, these numbers are surprisingly low. Russian officials have claimed that measures they took - such as shutting down the Russian border with China and setting up isolation zones for quarantined patients - have helped to keep the virus under control. However, several news reports have been published casting skepticism on the numbers, suggesting that in Russia there is a widespread culture against producing information that may draw negative international attention. To interpret this plot then, we need to have an understanding of global *geopolitics*. The numbers that we see reported in some parts of the world will vary from numbers reported in other parts of the world, not because the values are actually different, but because there are different cultures of reporting in certain countries. 
 
+Characterize the geo-politics in your own dataset. Why might it be important to consider the variable of place when interpreting your data?
+
+```{r eval=FALSE}
+Fill your response here in at least 100 words.
+```
+
+
 ### Case Study 2: Calls to 311 during Hurricane Sandy
 
-> Further Reading: 
+Now let's look at a time series of cases reported in the US. 
 
-311 is basically a customer service number for cities - a number for residents and visitors to report non-emergency issues, such as potholes and graffiti to city officials. In most cities, every call to 311 gets aggregated in a database, and increasingly, city officials are performing data analysis on the calls to figure out where certain issues in the city are concentrated. If they receive a number of calls about missed garbage pick-ups in a certain community, they may divert attention and resources there for improved sanitation. Often this data is publicly accessible for communities to analyze.
+```{r}
+cases_time_series %>% 
+  filter(Country.Region == "US") %>%
+  ggplot(aes(x = Case.Date, y = Cases)) + 
+  stat_summary(geom = "col", fun.y = "sum") +
+  theme_bw() 
+```
 
-When Hurricane Sandy hit NYC in 2012, the City leveraged data about calls New Yorkers had made to 311 to track where a number of different issues were occurring. Visualizing data about 311 calls in the three months following the disaster indeed showed a spike in complaints about issues like damaged trees and lack of heat in apartment buildings throughout the city. Leveraging this data, the city was able to position the devastation of the disaster as episodic - a result of natural forces beyond their control. 
+This plot indicates that few cases were reported prior to mid-March. However, to responsibly interpret this plot, we need to pay close attention to how case totals are produced. The numbers of confirmed cases reported in this dataset are based on the number of Covid-19 tests that are reported positive. However, the extent of testing in the US has been variable since January due to a number of political, regulatory, and material roadblocks. Up through February, very few tests were being conducted in the US as the federal government downplayed the threat posed by the virus. A series of follow-up events continued to shift the testing landscape:
 
-However, social researchers have argued that it is not so simple to delimit the temporal boundaries of a disaster. While a natural event may happen on a particular day or span of days, the structural conditions of the communities they impact have much longer timespans. Natural events occurring in delimited periods of time often exacerbate existing social issues like poverty, lack of affordable housing, and unequal access to healthcare. 
+* February 5: The CDC [shipped](https://www.technologyreview.com/s/615323/why-the-cdc-botched-its-coronavirus-testing/) coronavirus test kits to state labs with contaminated reagents. These labs ended up having to send their samples to the CDC for testing. 
+* February 29th: Up until this point, FDA regulations prevented labs from developing their own coronavirus test kits. On February, 29th, this rule was [lifted](https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-issues-new-policy-help-expedite-availability-diagnostics) allowing high-complexity labs to develop and run tests under what is called an Emergency Use Authorization. 
+* March 12th: Up until this point, in order for a lab to begin testing patients, they needed to be authorized by the FDA to do so. On March 12, the FDA [granted](https://www.fda.gov/news-events/press-announcements/coronavirus-covid-19-update-fda-gives-flexibility-new-york-state-department-health-fda-issues) more flexibility to states to authorize this testing.
+* While these regulatory changes quickened the pace at which labs could test patients, at this point, a new issue was emerging. Labs began reporting [critical shortages](https://www.newyorker.com/news/news-desk/why-widespread-coronavirus-testing-isnt-coming-anytime-soon) of testing supplies and reagents for conducting tests. 
 
-Let's zoom out on the 311 data to look at these issues over the course of years versus these three months.  Complaints to 311 about damaged trees do spike following most major natural events. However, complaints about lack of heat in apartments spike every year in October ...because in New York, that's when it gets cold. By only look at the data in months immediately after the disaster, the city could obscure the big picture - that poor New Yorkers face apartment negligence every year. The temporal context in which we analyze data matters a great deal for how we interpret it. 
+With every change in the testing landscape, we can expect that the number of cases reported will also change. To interpret this plot, we need to have an understanding of *chrono-politics*, or the politics of time. Importantly, these regulatory timelines are playing out differently in different countries. There is much to consider at the intersection of geo-politics and chrono-politics. 
+
+Characterize the chrono-politics in your own dataset. Why might it be important to consider the variable of time when interpreting your data?
+
+```{r eval=FALSE}
+Fill your response here in at least 100 words.
+```
 
 ## Confounding Variables
 
@@ -227,39 +256,41 @@ At this point, we will begin working in the ui code block and creating more cros
 Be sure to follow all commented instructions below to add inputs to your Shiny app. 
 
 ```{r}
-geo_input_choices <- hospitals %>% select(STATE) %>% distinct()
-date_input_start <- hospitals %>% select(STATE) %>% distinct()
-date_input_end <- hospitals %>% select(STATE) %>% distinct()
+geo_input_choices <- hospitals %>% select(STATE) %>% distinct() %>% arrange(STATE)
+date_input_start <- hospitals %>% summarize(date = min(SOURCEDATE))
+date_input_end <- hospitals %>% summarize(date = max(SOURCEDATE))
 
 ui <- dashboardPage(
   
   dashboardHeader(title = "TITLE HERE"),
   
   dashboardSidebar(
-      selectInput(inputId = "geo_val", label = "Select an geography:", choices = geo_input_choices),
-      dateRangeInput(inputId = "date_val", label = "Select a date range:", start, end, min, max)
+      selectInput(inputId = "geo_val", label = "Select an geography:", choices = geo_input_choices, selected = geo_input_choices[1]),
+      dateRangeInput(inputId = "date_val", label = "Select a date range:", start = date_input_start$date, end = date_input_end$date)
   ),
   
   dashboardBody(
       infoBoxOutput("value1", width = 4),
       infoBoxOutput("value2", width = 4),
       infoBoxOutput("value3", width = 4),
-      plotOutput("plot1"),
-      plotOutput("plot2"),
-      plotOutput("plot3"),
-      plotOutput("plot4")
+   
+      box(plotOutput("plot1")),
+      box(plotOutput("plot2")),
+      box(plotOutput("plot3")),
+      box(plotOutput("plot4"))
+
   )
 )
   
 
 ```
 
+In each of your functions below, you are going to add a filter statement, filtering to the user input. 
 
 ```{r}
-server <- function(input, output, session) {
+server <- function(input, output) {
   
   output$value1 <- renderInfoBox({
-    hospitals %>% filter(STATE == geo_val)
     quant_insight1 <- 0
     #Replace '0' above with the code for one of the values you calculated above. Replace 'FILL DESCRIPTION HERE' with a brief description of this number.  
     infoBox(quant_insight1,'FILL DESCRIPTION HERE', icon = icon("stats", lib='glyphicon'), color = "purple")
@@ -279,24 +310,48 @@ server <- function(input, output, session) {
   
   
   output$plot1 <- renderPlot({
-    hospitals %>% ggplot(aes(x = TYPE)) + geom_bar()
+    hospitals %>% 
+      filter(
+        STATE == input$geo_val & 
+        SOURCEDATE > input$date_val[1] &
+        SOURCEDATE < input$date_val[2]
+        ) %>%
+      ggplot(aes(x = TYPE)) + geom_bar()
     #Replace plot above with your own plot. 
     
   })
   
   output$plot2 <- renderPlot({
-    hospitals %>% ggplot(aes(x = TYPE)) + geom_bar()
+    hospitals %>% 
+      filter(
+        STATE == input$geo_val & 
+        SOURCEDATE > input$date_val[1] &
+        SOURCEDATE < input$date_val[2]
+        ) %>%
+      ggplot(aes(x = TYPE)) + geom_bar()
     #Replace plot above with your own plot. 
   })
   
   output$plot3 <- renderPlot({
-    hospitals %>% ggplot(aes(x = TYPE)) + geom_bar()
+    hospitals %>% 
+      filter(
+        STATE == input$geo_val & 
+        SOURCEDATE > input$date_val[1] &
+        SOURCEDATE < input$date_val[2]
+        ) %>%
+      ggplot(aes(x = TYPE)) + geom_bar()
     #Replace plot above with your own plot. 
     
   })
   
   output$plot4 <- renderPlot({
-    hospitals %>% ggplot(aes(x = TYPE)) + geom_bar()
+    hospitals %>% 
+      filter(
+        STATE == input$geo_val & 
+        SOURCEDATE > input$date_val[1] &
+        SOURCEDATE < input$date_val[2]
+        ) %>%
+      ggplot(aes(x = TYPE)) + geom_bar()
     #Replace plot above with your own plot. 
   })
   
@@ -316,7 +371,8 @@ shinyApp(ui, server)
 311 is basically a customer service number for cities - a number for residents and visitors to report non-emergency issues, such as potholes and graffiti to city officials. In most cities, every call to 311 gets aggregated in a database, and increasingly, city officials are performing data analysis on the calls to figure out where certain issues in the city are concentrated. If they receive a number of calls about missed garbage pick-ups in a certain community, they may divert attention and resources there for improved sanitation. Often this data is publicly accessible for communities to analyze. 
 
 ```{r}
-nyc311 <- read.csv("", stringsAsFactors = FALSE)
+nyc311_zip <- unzip("https://github.com/lindsaypoirier/STS-115/blob/master/datasets/311_before_2015.csv.zip?raw=true")
+nyc311 <- read.csv(nyc311_zip, stringsAsFactors = FALSE) 
 nyc311$Created.Date<-mdy_hms(nyc311$Created.Date)
 ```
 
@@ -357,4 +413,13 @@ nyc311 %>%
 ```
 
 > Liboiron, Max. 2015. “Disaster Data, Data Activism: Grassroots Responses to Representing Superstorm Sandy.” In Extreme Weather and Global Media, edited by Julia Leyda and Diane Negra. Taylor & Francis Group. https://doi.org/10.4324/9781315756486-7.
+
+
+```{r}
+hospitals %>% 
+      filter(between(VAL_DATE, as.Date("2012-01-01"), as.Date("2019-01-01")))
+
+hospitals %>% 
+      filter(between(BEDS, 3, 5))
+```
 
